# Restaurant-reservation-bot

./: README.md  diagnose.py  pyproject.toml  requirements.txt  run.py  test_book.py
config/: example_target.yaml
src/resbot/: __init__.py  __main__.py  activity_log.py  cli.py  config.py  engine.py  models.py  notifications.py  runner.py  scheduler.py
src/resbot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/resbot/web/: __init__.py  app.py
src/resbot/web/templates/: dashboard.html  dashboard_base.html
tests/: test_engine.py  test_models.py  test_resy.py
